--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 staticjinja>=0.3.0
 mkdocs>=0.9
 #pyScss>=1.3.2
-git+https://github.com/xen0n/pyScss.git@4afdc0a6db77d86c4500ddca9a36813b20c58b50
+git+https://github.com/xen0n/pyScss.git@for-staticpycon
 colorama>=0.3.2
