--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -145,8 +145,8 @@
   level: silver
   logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/vpncloud-200.png?imageView2/2/h/50
   link:  https://www.ytvpn.com/
-  intro: "云梯致力于提供专业的 VPN 服务,用我们的技术和热情,为大家打造快速,安全,高效的 VPN 接入及解决方案,满足自由访问互联网,网络传输加密,保护隐私等多种需求. 成熟的技术,专业的管理以及真诚的服务,让所有人都能享受开放的互联网. 云梯 VPN - 连接世界的梯子!"
-  intro_en: "FastYT committed to providing professional VPN service. FastYT use our passion and technology to provide fast, security,efficient service for Chinese and help them to surf the Internet, encrypted the online data and privacy protection. FastYT will be the ladder of people to connect the world."
+  intro: "云梯是国内技术圈最受欢迎的 VPN. 自动智能加速国内外网络. 从全球挑选了10个大陆最优机房, 14条最优线路, 上百台服务器做均衡负载. iPhone, iPad, Mac 一键安装, 同时完美支持 Windows, Android, 路由器."
+  intro_en: "FastYT is the most popular VPN service among Chinese developers, providing smart network acceleration for both domestic and foreign websites. One-click install procedure for iPhone, iPad and Mac; Windows, Android and router use are also fully supported."
 -
   level_silver: 1
   level: silver
