src: update ytvpn url

--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -144,7 +144,7 @@
   level_silver: 1
   level: silver
   logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/vpncloud-200.png?imageView2/2/h/50
-  link:  https://www.ytvpn.com/
+  link:  http://findti.com/?r=b9c01594cb1c8315
   intro: "云梯是国内技术圈最受欢迎的 VPN. 自动智能加速国内外网络. 从全球挑选了10个大陆最优机房, 14条最优线路, 上百台服务器做均衡负载. iPhone, iPad, Mac 一键安装, 同时完美支持 Windows, Android, 路由器."
   intro_en: "FastYT is the most popular VPN service among Chinese developers, providing smart network acceleration for both domestic and foreign websites. One-click install procedure for iPhone, iPad and Mac; Windows, Android and router use are also fully supported."
 -
