--- a/src/data/_speakers.yaml
+++ b/src/data/_speakers.yaml
@@ -27,16 +27,16 @@ id_weizeren:
 #   | |_) | |
 #   |____// |
 #       |__/
-#   
+#
 ####################################################################
 
 id_caibin:
-  name: 蔡斌 
+  name: 蔡斌
   city_beijing: 1
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/bj-douban-caibin.jpg?imageView2/2/h/80
   intro: "产品开发工程师 @ 豆瓣东西"
   topic:
-    title:  产品开发在豆瓣 
+    title:  产品开发在豆瓣
     preview: "通过讲述豆瓣东西的开发经历,介绍一下豆瓣工程师在一个产品开发过程中的工作方式"
 
 id_dongwei:
@@ -49,13 +49,13 @@ id_dongwei:
     preview: "技术人擅长学习新技术,有好奇心,希望攻克技术难题. 那么想不想一起参与设计一次商业云平台的任务调度系统呢?如果你愿意,欢迎一起参与到本次的演讲中来. 我们将和现场所有的Pythoner一起从头完成一次商业云计算平台的任务调度系统的设计."
 
 id_laike9m:
-  name: laike9m 
-  name_en: laike9m 
+  name: laike9m
+  name_en: laike9m
   city_beijing: 1
   city: 北京
   city_en: Beijing
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/bj-laike9m.jpeg?imageView2/2/h/80
-  intro: > 
+  intro: >
     中科院计算所学生,热爱 Python/Django,致力于推广 Python(尤其是 Py3)的使用
     - blog; http://laike9m.com
     - github; https://github.com/laike9m
@@ -83,7 +83,7 @@ id_quchifeng:
   city_en: Beijing
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
   intro: QPython项目创始人,曾任职于Zynga,新浪网等互联网公司
-  topic: 
+  topic:
     title: QPython - 安卓上的Python
     title_en: QPython - Python on Android
     preview: 介绍QPython,如何在手机和平板上写Python程序,在手机上用Python写出实用的脚本程序,随时随地写程序.
@@ -96,7 +96,7 @@ id_yanglin:
   city_en: Beijing
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
   intro: 杨林, 百度云系统工程师, 目前负责百度云的MongoDB/Redis等NoSQL系统的开发和运维, 在高性能网络服务和分布式存储系统方面有丰富经验.
-  topic: 
+  topic:
     title: redis-mgr 介绍
     title_en: Introduce redis-mgr
     preview: 是一个用python开发的redis集群管理工具,用redis-mgr可以快速(10min)搭建一个由redis/twemproxy/redis-sentinel 构成的redis 集群.   功能包括 一键式部署, failover, 监控, 实例迁移, 模块升级等.  github.com/idning/redis-mgr
@@ -108,13 +108,10 @@ id_wangwei:
   city: 北京
   city_en: Beijing
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/bj-wangwei.png?imageView2/2/h/80
-  intro: 经历丰富的实习生,从大一到大二在北京工业大学防灾减灾所做工业监控软件开发,大三在中科院计算所做 OpenStack 开发,大四(现)在UnitedStack 做虚拟网络与 OpenStack 开发. 活跃于 Buildbot,OpenStack 社区.
-    - 个人博客:http://mytrix.me/
-    - Github:https://github.com/MatheMatrix
-    - Launchpad主页:https://launchpad.net/~damon-devops
+  intro: UnitedStack SDN网络架构师，OpenStack、Buildbot 社区活跃开发者，个人博客: http://mytrix.me
   topic:
-    title: OpenStack与分布式系统开发
-    preview: "讲一讲Python与分布式系统开发,云计算开发,OpenStack吧,说的比较宽泛"
+    title: OpenStack 的软件架构
+    preview: "以 OpenStack 的虚拟网络组件 Neutron 为例介绍 OpenStack 的软件架构，兼谈健壮、可伸缩、低耦合的分布式系统设计。"
 
 id_kanglei:
   name: 康雷
@@ -134,7 +131,7 @@ id_liuxiaoming:
   city_en: Beijing
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/bj-xiaoming.jpg?imageView2/2/h/80
   intro: DeepGlint全栈工程师,guokr.com技术总监,tudou.com助理架构师
-  topic: 
+  topic:
     title: Python与机器人
     title_en: Python and Robot
     preview: Python在机器人技术中的优势与应用
@@ -147,7 +144,7 @@ id_binux:
   city_en: Beijing
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/binux.5449.png?imageView2/2/h/80
   intro: for fun.
-  topic: 
+  topic:
     title: pyspider 爬虫框架介绍
     title_en: Introduction to Web cawler framework - pyspider
     preview: 两种无需编写代码的结构化数据抽取(http://blog.binux.me/2014/07/how-to-extract-data-from-web/ 中介绍的 data highlighter 和 自动模板生成与提取)演示
@@ -175,7 +172,7 @@ id_liangjie:
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/liang-jie-head.png?imageView2/2/h/80
   intro: 北京航空航天大学大四学生
   intro_en: Senior student at Beihang University
-  topic: 
+  topic:
     title: 如何参与开源项目
     title_en: 如何参与开源项目
     preview: 开源大家都听过,但是真正参与到开源项目中的程序员却少之又少. 在这个快速演讲中我会介绍如何参与开源项目,让每个程序员都能更快地得到提升.
@@ -189,7 +186,7 @@ id_quxiaolong:
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
   intro: 北京信易云媒Python工程师
   intro_en: Python engineer at Beijing Msgcopy
-  topic: 
+  topic:
     title: ""
     preview: 简单介绍如何使用Python+JavaScript+Html+Css搭建类似于PhoneGap的轻量级,定制化的混合应用框架.
     preview_en: Construct an application framework like PhoneGap with Python+Javascript+Html+Css.
@@ -268,7 +265,7 @@ id_lifeilin:
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/sh-felinx_lee.jpg?imageView2/2/h/80
   intro: 上海掌和信息科技有限公司CEO,飞龙博客博主( http://feilong.me ),国内最早的Tornado脑残粉.
   intro_en: CEO of Shanghai Zhanghe Information Technology, Tornado fanboy. http://feilong.me
-  topic: 
+  topic:
     title: "NSQ&Redis等组合拳快速实现移动社交产品动态流"
     title_en: "Rapidly implement a mobile dynamic product flow using NSQ & Redis etc.."
     preview: "NSQ&Redis等组合拳快速实现移动社交产品动态流"
@@ -283,7 +280,7 @@ id_huangdong:
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/sh-huangdong.jpg?imageMogr2/crop/!200x200a40a10|imageView2/2/h/80
   intro: FreeBSD,Python社区发起人/魔豆路由器创始人/新浪,优酷土豆等多个核心系统平台和产品技术负责人
   intro: Promoter of FreeBSD & Python community, founder of Modou WiFi, former tecnical lead of many core systems and projects in Sina and Youku Todou Inc.
-  topic: 
+  topic:
     title: Python in Modou
     preview: "Python在魔豆路由器的开发过程中起到了哪些作用,特别会针对Python的二层,三层网络以及网络层的单元测试,远程功能测试进行细致的说明."
     preview_en: How Python works in the development of Modou Router. Key points of this lecture are the second and third network layers of Python, and remote function test.
@@ -296,7 +293,7 @@ id_wangzhen:
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/sh-wangzhen.jpg?imageView2/2/h/80
   intro: Python 爱好者 对各种新技术都有兴趣.  目前在上海marin software工作
   intro_en: Python lover, interested in various new technologies, now working at Marin Software Shanghai
-  topic: 
+  topic:
     title: "why python is slow, python runtime compared with other languages"
     preview: "为什么我们会觉得Python的运行时效率是个问题,那么和其他的语言相比python 的运行时究竟有何不同呢? 如果说python得执行效率较低的话低在什么地方? python的效率问题应该如何对待"
     preview_en: "Why we regard the Python runtime efficency as a problem? Comparing with other languages, how Python behaves differently? When does Python run slowly? How to treat Python low-efficiency problem?"
@@ -321,7 +318,7 @@ id_kj:
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/kj-foto.png?imageMogr2/crop/!200x200a50a20|imageView2/2/h/80
   intro: GDG上海创始人, 齐书CEO
   intro_en: Founder of GDG Shanghai, CEO of Qishu.co
-  topic: 
+  topic:
     title: "用不好MySQL的Python工程师不是优秀的NoSQL专家"
     title_en: "A Pythoner who cannot use MySQL proficiently can never become an expert on NoSQL"
     preview: "用不好MySQL的Python工程师不是优秀的NoSQL专家"
@@ -335,7 +332,7 @@ id_adieu:
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/sh-adieu-pic.png?imageView2/2/h/80
   intro: 2014年开始全职创业.
   intro_en: Begin his full-time startup since 2014
-  topic: 
+  topic:
     title: "Django应该怎么用?"
     title_en: "The right way to use Django?"
     preview: "看到国内用Django的同学越来越多,但是缺少必要的指导,想分享一下我用Django过程中积累的一些经验."
@@ -349,7 +346,7 @@ id_xuzhixiang:
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/Shell909090-lighting.png?imageView2/2/h/80
   intro: 现任七牛工程师,python/c程序员
   intro_en: Engineer of Qiniu, Python and C programmer
-  topic: 
+  topic:
     title: "Python中的进程,线程,协程,同步,异步,回调. "
     title_en: "Process, Thread, Coroutine, Synchronization, Asynchronization and Callback in Python"
     preview: "Python中的进程,线程,协程,同步,异步,回调. "
@@ -363,7 +360,7 @@ id_wangjianfeng:
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/jeff-openerp_14_11_jeff.png?imageView2/2/h/80
   intro: 致力于基于Python的OpenERP在中国的推广
   intro_en: Devoting himself on the promotion of Python-based OpenERP in China
-  topic: 
+  topic:
     title: OpenERP 再说
     title_en: Review on OpenERP
     preview:  "汇报这年 OpenERP 的发展"
@@ -377,7 +374,7 @@ id_yejianye:
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/ryan_500x500.jpg?imageView2/2/h/80
   intro: 之前在Slide和Google任技术经理,目前是Glow公司的CTO,也是公司的创始人之一
   intro_en: CTO and co-founder of Glow, former technical manager of Slide and Google
-  topic: 
+  topic:
     title: "用Python搭建RPC framework"
     title_en: "Construct RPC framework using Python"
     preview: "可以和大家分享一下在Glow里我们是如何用Python编写各种Web Services,以及各个Services之间是如何通信的. "
@@ -391,7 +388,7 @@ id_hujingchao:
   avatar: https://avatars1.githubusercontent.com/u/478194?v=2&s=460
   intro: "2009年开始用Python工作后一直被其生态圈惯坏到现在, 长期从事互联网(创业)相关的技术领域, 目前专注于数据分析,机器学习方向,就职于上海菜根科技有限公司. "
   intro_en: Spoiled by python ecosystem since 2009, long time enthusiast in web related technologies, currently focus on "Machine Learning" and "Data Analysis", works for Shanghai Caigen Tech Inc.
-  topic: 
+  topic:
     title: "Python机器学习实践"
     title_en: "Practical Machine Learning in Python"
     preview: "Python机器学习实践"
@@ -406,7 +403,7 @@ id_caowenjiong:
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/sh-duitang.jpg?imageView2/2/h/80
   intro: "堆糖网技术合伙人. 曾担任阿里巴巴平台架构师,盛大研究员. "
   intro_en: Technical partner at Duitang.com, former archetect at Alibaba and researcher at SNDA.
-  topic: 
+  topic:
     title: "from python import data.process"
     preview: "简单介绍如何使用python代码及开源库来做数据处理,也介绍了一些支持python的开源数据方案,以及它们在堆糖的应用情况. "
     preview_en: "Data processing with python and some open source libraries, as well as some open source python project, and how they are used in Duitang."
@@ -451,7 +448,7 @@ id_jeff:
   avatar: http://pyconcn.qiniudn.com/images/speakers/131123_jeff.png?imageView2/2/h/80
   intro: 广州图锐信息科技创始人兼技术负责人,珠三角技术沙龙常务组委. 长年活跃在一线的python码农.
   intro_en: Founder and tech leader of Guangzhou ToraySoft, organizer of  TechParty, Python coder
-  topic: 
+  topic:
     title: Python web异步编程实践
     title_en: Python web Asychronous Programming
     preview: 主要讲述我们需要使用异步编程模型的场景,编程框架从tornado到gevent的迁移过程遇到的种种坑和填坑方法.
@@ -480,7 +477,7 @@ id_panjunyong:
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/panjunyong_13_11_image.png?imageView2/2/h/80
   intro: Python老人,易度云办公 easydo.cn 创始人,前中国Zope/Plone社区推广者
   intro_en: Python expert, founder of easydo.cn, former promoter of China Zope/Plone community
-  topic: 
+  topic:
     title: 一切皆python的易度前端框架
     title_en: A simple front end framework with pure python
     preview: 前端技术变化非常快,前端知识快速陈旧,javascript语言很蛋疼,html也很蛋疼,多终端支持也很蛋疼. 易度自己构建的前端框架,一切皆Python,快速编写前端应用,无js,无html,无蛋疼,支持多终端.
@@ -494,7 +491,7 @@ id_wuzhangjin:
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
   intro: MEIZU 工程师
   intro_en: Engineer at MEIZU
-  topic: 
+  topic:
     title: Python Practices for Android/Linux Development?
     preview: 主要从实际应用Python方面分享,如何更好地优化工作效率,案例会涵盖数据渲染,数据着色,自动化以及系统优化等...
     preview_en: System optimization - data rendering, imagical thinking; oscilloscope, power consumption, performance, temparature control and data visualization by python. Automatic test framework - find problems in advance, fast reproduce problems; Python + shell code snippets; program controlled switch and power and serial port, GPIB by python, python serial module; visualized kernel debugging; individual bug; color message received from serial port.
@@ -507,7 +504,7 @@ id_huangyi:
   avatar: http://pyconcn.qiniudn.com/images/speakers/huangyi_1.jpeg?imageView2/2/h/80
   intro: 云悦科技技术合伙人,Python,Haskell爱好者,手游开发者.
   intro_en: Technical co-founder of Yunyue Tech, Python & Haskell lover, mobile game developer
-  topic: 
+  topic:
     title: keep simple things simple and high performant
     preview: 分享cython开发实践,以及两个python库cprotobuf和credis的设计.
     preview_en: Share the experience during developing cython. And the design of cprogobuf and credis.
@@ -520,7 +517,7 @@ id_wengwei:
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/wuvist.jpg?imageMogr2/crop/!700x700a0a70|imageView2/2/h/80
   intro: 80后创业者,今年沉迷于使用python生成Go源码
   intro_en: Entrepreneurs, hooked on generating Go source code with python this year
-  topic: 
+  topic:
     title: 使用Python实现"Go元编程
     title_en: Python version of "Go Meta Programming"
     preview: 讲述如何使用python对go语言进行预处理生成代码,实现"Go元编程";目前项目Go源码已经突破30W行,大半是由python"编译器"自动生成而来.
@@ -543,7 +540,7 @@ id_longlimin:
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/zh-cmcm-llm.png?imageMogr2/crop/!200x200a40a10|imageView2/2/h/80
   intro: 猎豹移动,工程师
   intro_en: Engineer of Cheetah Mobile
-  topic: 
+  topic:
     title: Luna 之高效 KV 库
     title_en: Luna one efficient KV database
     preview: 在大数据实时统计系统架构过程中,必然的遇到了海量任务队列的分布式储存问题;分享如何一步步,用合适的开源系统升级架构,到最后,基于开源产品,完成原创系统的体验.
@@ -557,7 +554,7 @@ id_wenming:
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/wenmin-16_11_psb.jpg?imageMogr2/crop/!500x500a40a80|imageView2/2/h/80
   intro: 旧金山人,曾负责水银云查杀和反钓鱼的开发
   intro_en: San Franciso developer, former leader of the development of Mecury cloud killing and anti-phishing
-  topic: 
+  topic:
     title: python是否适合高性能web服务的开发?
     title_en: python suitable for high performance and web service?
     preview: "主要从异步,缓存等方面探讨."
@@ -569,8 +566,8 @@ id_mengfanliang:
   city: 珠海
   city_en: Zhuhai
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
-  intro: docker.cn 核心开发人员. 一直从事云计算,大数据相关的开发和管理工作. 目前专注 Docker 技术和 Golang 语言的研究. 
-  topic: 
+  intro: docker.cn 核心开发人员. 一直从事云计算,大数据相关的开发和管理工作. 目前专注 Docker 技术和 Golang 语言的研究.
+  topic:
     title: Docker Registry Build By Python
     preview: 讨论在Docker 体系中 Python 的能力
     preview_en: What Python is capable of in the Docker system
@@ -591,8 +588,8 @@ id_juzheng:
   city_en: Suzhou
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/sz-Docker_Lance.png?imageView2/2/h/80
   intro: 80后复古伪文艺程序员,好奇一切计算机相关的技术,热爱骑行,美食和中国传统文化,"Docker权威指南"合作译者,目前使用NodeJS进行服务器端的开发.
-  topic: 
-    title: TBD 
+  topic:
+    title: TBD
     preview: TBD
 
 id_baoyongcheng:
@@ -601,21 +598,21 @@ id_baoyongcheng:
   city: 苏州
   city_en: Suzhou
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/sz-id_baoyongcheng.JPG?imageView2/2/h/80
-  intro: python爱好者,使用python开发过 土豆网CDN系统,土豆网视频转码系统,土豆网上线发包系统,swift存储系统,现在正在从事京东云计算 
-  topic: 
-    title: python之于云计算 
+  intro: python爱好者,使用python开发过 土豆网CDN系统,土豆网视频转码系统,土豆网上线发包系统,swift存储系统,现在正在从事京东云计算
+  topic:
+    title: python之于云计算
     preview: ...
 
 id_laoqi:
-  name: 老齐 
+  name: 老齐
   city_suzhou: 1
   city: 苏州
   city_en: Suzhou
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/sz-laoqi.jpg?imageView2/2/h/80
   intro: 一个用python的程序员. 正在撰写python的学习教程. 请看www.itdiffer.com
-  topic: 
-    title: python的一个好轮子---tornado 
-    preview: 介绍用于网站开发的tornado框架. 
+  topic:
+    title: python的一个好轮子---tornado
+    preview: 介绍用于网站开发的tornado框架.
 
 
 ####################################################################
@@ -635,9 +632,9 @@ id_hepochen:
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/HepoChen.jpg?imageView2/2/h/80
   intro: "FarBox的创始人,流浪在代码一线的产品经理."
   intro_en: Co-founder and PM of Farbox.
-  topic: 
+  topic:
     title: Python在FarBox的实际应用
-    preview: 比如服务器的运维,自动部署,故障自测;分布式的Websocket服务;用户账户系统与微信扫码登录;自建云盘;Gevent在Web应用中的优化机制;超高效的服务端缓存系统等. 
+    preview: 比如服务器的运维,自动部署,故障自测;分布式的Websocket服务;用户账户系统与微信扫码登录;自建云盘;Gevent在Web应用中的优化机制;超高效的服务端缓存系统等.
     preview_en: TBD
 
 id_linhuchong:
@@ -648,9 +645,9 @@ id_linhuchong:
   avatar: http://avatar-ludwig.qiniudn.com/ling-huchong.jpg
   intro: "SFIT资深软件工程师,BT群核心成员, g4pcc发起人"
   intro_en: "Senior software engineer of SFIT, core-member of BT group, founder-member of g4pcc"
-  topic: 
+  topic:
     title: Gevent简介
-    preview: Gevent的工作原理,用途介绍,0.13版到1.0版的变化等. 
+    preview: Gevent的工作原理,用途介绍,0.13版到1.0版的变化等.
 
 id_lifeng:
   name: 李枫
@@ -660,10 +657,10 @@ id_lifeng:
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/hz-lifeng.jpg?imageMogr2/crop/!400x400a40a60|imageView2/2/h/80
   intro: "在手机相关研发领域已有近11年工作经验,先后在摩托罗拉,三星等IT企业工作,现就职于阿里巴巴."
   intro_en: "Experienced in mobile development and related, worked for Moto, Samsung and other IT companies, now working at Alibaba"
-  topic: 
+  topic:
     title: Python与LLVM
     title_en: Python and LLVM
-    preview: 1) LLVM的Python绑定--llvmpy的架构与代码分析; 2) 基于LLVM的反汇编引擎Capstone的Python包装 
+    preview: 1) LLVM的Python绑定--llvmpy的架构与代码分析; 2) 基于LLVM的反汇编引擎Capstone的Python包装
     preview_en: TBD
 
 id_shiyuanmin:
@@ -674,7 +671,7 @@ id_shiyuanmin:
   avatar: http://avatar-ludwig.qiniudn.com/shi-yuanmin.jpg
   intro: 诺基亚通信的资深技术专家,软件研发教练
   intro_en: Senior technology expert in Nokia Communication, Software development manager
-  topic: 
+  topic:
     title: idiomatic python
-    preview: 当你学了一段时间的Python,以为自己真正成为了一名pythonist,结果发现,你只是用到了python最最基本的语句,所写的python程序只能说没有语法错误,而称不上真正意义上的python编程,那么地道的Python编程又该如何呢. 
+    preview: 当你学了一段时间的Python,以为自己真正成为了一名pythonist,结果发现,你只是用到了python最最基本的语句,所写的python程序只能说没有语法错误,而称不上真正意义上的python编程,那么地道的Python编程又该如何呢.
     preview_en: TBD
