fixed ustack logo link

--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -150,7 +150,7 @@
 -
   level_silver: 1
   level: silver
-  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/UnitedStack-h-logo.png?imageView2/2/h/50
+  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/UnitedStack-h-logo.png?imageView2/2/h/50
   link:  https://www.ustack.com/
   intro: "UnitedStack,中国最专业的OpenStack云服务公司;UnitedStack始终坚持产品和技术为主导的工程师文化, 核心产品基于自主开发的全球最好用高性能OpenStack云服务平台UOS. UOS集中了弹性计算,分布式块存储和软件定义网络(SDN)等IaaS核心技术和能力,为客户提供安全,可靠与隔离的基础设施云环境. "
 -
