--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -151,6 +151,8 @@ afternoon: 下午
 afternoon_en: Afternoon
 lighting_talks: 闪电演讲
 lighting_talks_en: Lighting Talks
+cancel_talks: 临时取消
+cancel_talks_en: Cancel Talks
 notices: 注意
 notices_en: Notices
 speechmaker: 讲师
