src: minor english fix

--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -152,13 +152,13 @@ afternoon_en: Afternoon
 lighting_talks: 闪电演讲
 lighting_talks_en: Lighting Talks
 cancel_talks: 临时取消
-cancel_talks_en: Cancel Talks
+cancel_talks_en: Canceled Talks
 notices: 注意
 notices_en: Notices
 speechmaker: 讲师
 speechmaker_en: Speechmaker
 global: 全球
-global_en: OnLine
+global_en: Online
 beijing: 北京
 beijing_en: Beijing
 shanghai: 上海
