up Seeed Studio topic

--- a/src/data/_speakers.yaml
+++ b/src/data/_speakers.yaml
@@ -433,8 +433,8 @@ id_wanganyu:
   intro: 深圳矽递科技(SeeedStudio)运营总监&CIO; Python爱好者,Raspberry Pi玩家
   intro_en: "COO & CIO of Shengzhen Seeed Studio, Python lover, Raspberry Pi player"
   topic:
-    title: Maker 中的 Pythonic
-    title_en: Pythonic in Maker
+    title: 软硬结合 For Pythoneer
+    title_en: Hardware and software combination for Pythoneer
     preview: 移动互联网下智能硬件是一个绕不开的话题,开源硬件给移动互联网带来了很大的想象空间,也让更多人可以参与移动互联网---尤其是程序员. 针对目前开源硬件的现状,流行的平台模块和应用案例给大家做分享交流,希望给各路饥渴的程序员一些新的思路和启发
     preview_en: Intelligent hardware is an inevitable topic in mobile network time, open source hardware has brought huge develop space for internet, and make it possible for a lot of people, especially programmers, to join the whole IT. Share the knowledge about popular platform module and application case, wish to help all come up with new ideas.
 
