--- a/src/data/_agenda.yaml
+++ b/src/data/_agenda.yaml
@@ -13,6 +13,7 @@ beijing:
   venue_en: Room 507
   traffic: (北京市海淀区中关村南四街4号)
   traffic_en: "(...)"
+  maplink: 'http://j.map.baidu.com/GaGwy'
   date: 2014-11-15 09:00~18:00
   notices: ...
   morning:
