--- a/src/data/_agenda.yaml
+++ b/src/data/_agenda.yaml
@@ -109,7 +109,7 @@ shanghai:
 zhuhai:
   address: 珠海吉大 景山路 莲山巷8号 金山软件大厦
   address_en: "Jinshan Software Building, No.8 Lianshan Road, Jingshan road, Xiangzhou, Zhuhai"
-  venue: 一层会议厅
+  venue: 一层会议厅; <a href="https://www.youtube.com/watch?v=k6hha9Z2Yqc#t=56">Youtube 直播: v=k6hha9Z2Yqc</a>
   venue_en: Floor 1 Meet Hall
   traffic: "珠海中天酒店对面,工商银行隔壁;4路,9路,K10路,13路,22路,23路,26路,99路 到水湾北下,即见!坐船,到九洲港下; 城铁到终点 拱北站下; TEXI 13元即达!"
   traffic_en: "Line 4, 9, K10, 13, 22, 23, 26, 99 at North Shuiwan Station; By ship, Jiu Zhou Port; Subway, Gong Bei Station; Taxi, RMB 13"
