--- a/src/data/_speakers.yaml
+++ b/src/data/_speakers.yaml
@@ -16,7 +16,7 @@ id_weizeren:
   topic:
     title: 花蓮.py 社区体验
     title_en: 花蓮.py community story (hualien.python.org.tw)
-    preview: 我的开源体验,如何在没有人用 Python 的偏乡,建立 Python 社区的一些小小经验.  这三四年参与开源社区活动,并尝试将从社区学到的经验,回馈到地方.
+    preview: 我的开源体验,如何在没有人用 Python 的偏乡,建立 Python 社区的一些小小经验.  这三四年参与开源社区活动,并尝试将从社区学到的经验,回馈到地方.<br/>+ <a href='http://youtu.be/ZEZQjnoG2hw'>视频</a>
     preview_en: (online from TW) How did build Python community in partial Township without Python user? These three or four years to participate in the open source community, and try to learn from the experience of the community, to contribute to the place.
 
 ####################################################################
